"hover data effect"

--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@deck.gl/layers": "^9.1.0",
+    "@deck.gl/mapbox": "^9.1.0",
+    "@deck.gl/react": "^9.1.0",
     "@react-three/drei": "9.32.4",
     "@react-three/fiber": "8.8.7",
+    "d3": "^7.9.0",
+    "deck.gl": "^9.1.0",
+    "mapbox-gl": "^3.9.4",
+    "maplibre-gl": "^5.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^8.0.1",
     "react-scripts": "5.0.1",
     "three": "0.144.0",
     "web-vitals": "4.2.4"
