--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "maplibre-gl": "^5.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-map-gl": "^8.0.1",
+    "react-map-gl": "^7.0.15",
     "react-scripts": "5.0.1",
+    "react-three-map": "^0.8.2",
     "three": "0.144.0",
     "web-vitals": "4.2.4"
   },
